--- a/street.html
+++ b/street.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <link rel="stylesheet" href="assets/css/slider-pro.min.css"/>
@@ -27,6 +27,8 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+
+  
 </head>
 
 <body>
@@ -45,7 +47,7 @@
   <!-- ======= Navbar ======= -->
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="ARTISTE INSTAGRAM"">NOM</a>
+      <a class="navbar-brand" target="_blank" href="https://instagram.com/"">NOM</a>
 	  <a  href="iframe.html" style="height: 50px; margin-right:10px">
 	  <i class="bi bi-house" style="font-size: 2rem; position: relative;"></i>
 		</a>
@@ -69,6 +71,7 @@
   </script>
 
   <main id="main">
+
 
     <section class="section">
 
